tests/baselines/reference/declarationEmitMappedTypeTemplateTypeofSymbol.errors.txt
b.ts(2,14): error TS4118: The type of this node cannot be serialized because its property '[timestampSymbol]' cannot be serialized.
c.ts(3,14): error TS4118: The type of this node cannot be serialized because its property '[timestampSymbol]' cannot be serialized.


==== a.d.ts (0 errors) ====
    export declare const timestampSymbol: unique symbol;
    
    export declare const Timestamp: {
        [TKey in typeof timestampSymbol]: true;
    };
    
    export declare function now(): typeof Timestamp;
    
==== b.ts (1 errors) ====
    import * as x from "./a";
    export const timestamp = x.now();
                 ~~~~~~~~~
!!! error TS4118: The type of this node cannot be serialized because its property '[timestampSymbol]' cannot be serialized.
    
==== c.ts (1 errors) ====
    import { now } from "./a";
    
    export const timestamp = now();
                 ~~~~~~~~~
!!! error TS4118: The type of this node cannot be serialized because its property '[timestampSymbol]' cannot be serialized.